Clear api call result array after call is done

--- a/www/index.html
+++ b/www/index.html
@@ -172,6 +172,7 @@
         }
         
         document.getElementById("food-item-list").innerHTML = foodItemIndexText;
+        apiCallResults = [];
       }
 
       function goMyPage() { 
